--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="login_defualt">请输入用户名</string>
     <string name="login_defualt2">请输入密码</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="vedio_add">去添加下载</string>
 
     <!-- Strings related to Settings -->
 
