--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,6 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="baseURL">http://10.0.2.2:8080/loginserver/</string>
+    <string name="app_label">搜索</string>
+    <string name="search_hint"></string>
 </resources>
