--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="baseURL">http://10.0.2.2:8080/loginserver/</string>
     <string name="app_label">搜索</string>
     <string name="search_hint"></string>
+    <string name="user_information_src">userInfo</string>
 </resources>
