update setting view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,6 @@
     <string name="app_label">搜索</string>
     <string name="search_hint"></string>
     <string name="user_information_src">userInfo</string>
+    <string name="save">保存</string>
+
 </resources>
