--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CollegeStudent</string>
+    <string name="app_name">大学生端</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -103,7 +103,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="baseURL">http://192.168.1.108:8080/loginserver/</string>
+    <string name="baseURL">http://60.205.190.45:8080/education/</string>
     <string name="app_label">搜索</string>
     <string name="search_hint"></string>
     <string name="user_information_src">userInfo</string>
